<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcolav.popularmovies.DetailsActivity">

    <TextView
        android:id="@+id/details_title"
        android:text="@string/details_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@id/details_title"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/details_poster"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            app:srcCompat="@android:color/transparent"
            android:padding="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/details_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/details_release_date"
                tools:text="@string/details_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"/>

            <TextView
                android:text="@string/details_vote_average_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/details_vote_average"
                tools:text="@string/details_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/details_plot_synopsis"
            tools:text="@string/details_plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"/>

    </ScrollView>

</LinearLayout>
